--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>
+    <!-- fontawesome -->
+
     <title>Bán khóa học</title>
   </head>
   <body>
